--- a/Taller2/descuentos.html
+++ b/Taller2/descuentos.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Porcentajes y descuentos</h1>
+    <header>
+        <h1>Porcentajes y descuentos</h1>
+        <p>Es el segundo taller básico de JS</p>
+    </header>
+
+    <section>
+        <h2>Calcula el precio a pagar de tus productos con descuentos</h2>
+        <form>
+            <label for="InputPrice">Escribe el precio de tu producto:</label>
+            <input id="InputPrice" type="number"/>
+
+            <label for="InputDiscount">Escribe el descuento de tu producto</label>
+            <input id="InputDiscount" type="number"/>
+
+            <button type="button" onclick="onClickButtonPriceDiscount()">Calcular el precio con descuento</button>
+            <p id="ResultPrice"></p>
+        </form>
+    </section>
 
     <script src="./descuentos.js"></script>
 </body>
