--- a/Taller2/descuentos.html
+++ b/Taller2/descuentos.html
@@ -17,10 +17,10 @@
         <h2>Calcula el precio a pagar de tus productos con descuentos</h2>
         <form>
             <label for="InputPrice">Escribe el precio de tu producto:</label>
-            <input id="InputPrice" type="number"/>
+            <input id="InputPrice" type="number" placeholder="Número" />
 
-            <label for="InputDiscount">Escribe el descuento de tu producto</label>
-            <input id="InputDiscount" type="number"/>
+            <label for="InputDiscount">Escribe el descuento de tu producto:</label>
+            <input id="InputDiscount" type="number" placeholder="Número"/>
 
             <button type="button" onclick="onClickButtonPriceDiscount()">Calcular el precio con descuento</button>
             <p id="ResultPrice"></p>
